First text selection version
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -9,3 +9,7 @@
 @import 'base/reusables';
 @import 'base/unclassed';
 @import 'base/typography';
+
+// Components
+@import 'components/document-excerpt';
+@import 'components/document-body';
