--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -1,103 +1,105 @@
 {% extends "structure/base.html" %}
+{% load staticfiles %}
+
 {% block content %}
-<main>
-  <h1>
+<main class="document-body js-document">
+  <h1 class="document-excerpt js-document-excerpt" data-id="1">
     This is a motherfucking website.
   </h1>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="2">
     Fits on all your shitty screen
   </p>
-  <h2>
+  <h2 class="document-excerpt js-document-excerpt" data-id="3">
     Seriously, what the fuck else do you want?
   </h2>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="4">
     You probably build websites and think your shit is special. You think your 13 megabyte parallax-ative home page is going to get you some fucking Awwward banner you can glue to the top corner of your site. You think your 40-pound jQuery file and
     83 polyfills give IE7 a boner because it finally has box-shadow. Wrong, motherfucker. Let me describe your perfect-ass website:
   </p>
   <ul>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="5">
       Shit's lightweight and loads fast
     </li>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="6">
       Fits on all your shitty screens
     </li>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="7">
       Looks the same in all your shitty browsers
     </li>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="8">
       The motherfucker's accessible to every asshole that visits your site
     </li>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="9">
       Shit's legible and get your fucking point across (if you had one instead of just 5mb pics of hipsters drinking coffee)
     </li>
   </ul>
-  <h3>
+  <h3 class="document-excerpt js-document-excerpt" data-id="10">
     Well guess what, motherfucker:
   </h3>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="11">
     You. Are. Over-designing. Look at this shit. It's a motherfucking website. Why the fuck do you need to animate a fucking trendy-ass banner flag when I hover over that useless piece of shit? You spent hours on it and added 80 kilobytes to your
     fucking site, and some motherfucker jabbing at it on their iPad with fat sausage fingers will never see that shit. Not to mention blind people will never see that shit, but they don't see any of your shitty shit.
   </p>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="12">
     You never knew it, but this is your perfect website. Here's why.
   </p>
-  <h2>
+  <h2 class="document-excerpt js-document-excerpt" data-id="13">
     This is just placeholder content
   </h2>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="14">
     I wanted this page to have some <a href="#">links</a> and an ordered list, so I added this sections to it.
   </p>
   <ol>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="15">
       Here is your ordered list
     </li>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="16">
       This is the second item
     </li>
-    <li>
+    <li class="document-excerpt js-document-excerpt" data-id="17">
       And finally, the third one
     </li>
   </ol>
-  <p>Also, there should be some example of preformated texts such as this: <code>var count = 0;</code>. And a bigger junk of it like the one below:
+  <p class="document-excerpt js-document-excerpt" data-id="18">Also, there should be some example of preformated texts such as this: <code>var count = 0;</code>. And a bigger junk of it like the one below:
   </p>
   <pre>function counter() {<br>    var count = 0;<br>    return function() {<br>        return ++count;<br>    };<br>}</pre>
-  <h2>
+  <h2 class="document-excerpt js-document-excerpt" data-id="19">
     It's fucking lightweight
   </h2>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="20">
     This entire page wights less athan the gradient-meshed facebook logo on your fucking Wordpress site. Did you seiously lo ad 100kb of jQuery UI just so you could animate the fucking background color of a div? You loaded all 7 fontfaces of a
     shitty webfont just so you could say "Hi." at 100px height at the beginning of your site? You piece of shit.
   </p>
-  <h2>
+  <h2 class="document-excerpt js-document-excerpt" data-id="21">
     It's responsive
   </h2>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="22">
     You dumbass. You thought you needed media queries to be responsive, but no. Responsive means that it responds to whatever motherfucking screensize it's viewed on. This site doesn't care if you're on an iMac or a motherfucking Tamagotchi.
   </p>
-  <h2>
+  <h2 class="document-excerpt js-document-excerpt" data-id="23">
     It fucking works
   </h2>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="24">
     Look at this shit. You can read it ... that is, if you can read, motherfucker. It makes sense. It has motherfucking hierarchy. It's using HTML5 tags so you and your bitch-ass browser know what the fuck's in this fucking site. That's semantics,
     motherfucker.
   </p>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="25">
     It has content on the fucking screen. Your site has three bylines and link to your dribbble account, but you spread it over 7 full screens and make me click some bobbing button to show me how cool the jQuery ScrollTo plugin is.
   </p>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="26">
     Cross-browser compatibility? Load this motherfucker in IE6. I fucking dare you.
   </p>
-  <h2>
+  <h2 class="document-excerpt js-document-excerpt" data-id="27">
     This is a website. Look at it. You've never seen one before.
   </h2>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="28">
     Like the man who's never grown out his beard has no idea what his true natural state is, you have no fucking idea what a website is. All you have ever seen are shitty skeuomorphic bastardizations of what should be text communicating a fucking
     message. This is a real, naked website. Look at it. It's fucking beautiful.
   </p>
-  <h3>
+  <h3 class="document-excerpt js-document-excerpt" data-id="29">
     Yes, this is fucking satire, you fuck
   </h3>
-  <p>
+  <p class="document-excerpt js-document-excerpt" data-id="30">
     I'm not actually saying your shitty site should look like this. What I'm saying is that all the problems we have with websites are ones we create ourselves. Websites aren't broken by default, they are functional, high-performing, and accessible.
     You break them. You son-of-a-bitch.
   </p>
@@ -108,3 +110,10 @@
   </p>
 </main>
 {% endblock content %}
+
+{% block page_js %}
+  <script src="{% static 'js/components/documentExcerpt/view.js' %}"></script>
+  <script src="{% static 'js/components/documentBody/view.js' %}"></script>
+  <script src="{% static 'js/components/body/view.js' %}"></script>
+  <script src="{% static 'js/pages/home.js' %}"></script>
+{% endblock page_js %}
