--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -23,9 +23,11 @@
 
     {% compress js %}
       <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
+      <script src="{% static 'js/utils/publishSubscribe.js' %}"></script>
+      <script src="{% static 'js/utils/events.js' %}"></script>
+      {% block page_js %}
+      {% endblock page_js %}
     {% endcompress %}
 
-    {% block extrajs %}
-    {% endblock extrajs %}
   </body>
 </html>
