Show suggestionInput when finish text selection
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -13,3 +13,4 @@
 // Components
 @import 'components/document-excerpt';
 @import 'components/document-body';
+@import 'components/suggestion-input';
