Add initial validations on suggestionInput
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -118,6 +118,7 @@
 
   <div>
     <input class="js-input" type="text" name="">
+    <span class="js-inputError"></span>
     <button class="js-send">Enviar</button>
   </div>
 </div>
