--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -1,5 +1,7 @@
 $color-theme: #396;
 $color-link: #36c;
+$color-whitesmoke: #F4F4F4;
+$color-brand: #2DA965;
 
 // Social colors
 $color-facebook: #3b5998;
