--- a/src/static/scss/ambience/_typography.scss
+++ b/src/static/scss/ambience/_typography.scss
@@ -1,5 +1,5 @@
-$font-family-body: 'Merriweather', serif;
-$font-family-mono: 'Source Code Pro', monospace;
+$font-family-body: 'Roboto', sans-serif;
+$font-family-mono: 'Montserrat', sans-serif;
 
 $font-size-mega: 7.5rem;
 $font-size-kilo: 4.1rem;
