--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -14,3 +14,6 @@
 @import 'components/document-excerpt';
 @import 'components/document-body';
 @import 'components/suggestion-input';
+@import 'components/nav-bar';
+@import 'components/nav-burger';
+@import 'components/nav-menu';
