--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -15,6 +15,8 @@
   outline: none;
 
   appearance: none;
+  
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   &:focus {
     outline-width: 2px ;
@@ -29,6 +31,12 @@
 }
 
 body {
+  background-color: $color-whitesmoke;
+
+  &.-open-menu {
+    overflow: hidden;
+  }
+
   &.-voidselect {
     user-select: none;
   }
@@ -37,23 +45,12 @@ body {
 main {
   width: 66ch;
   max-width: 90%;
+  margin-top: 2.75rem;
   margin-right: auto;
   margin-left: auto;
   padding: $space-centi;
   padding-top: $space-centi;
   padding-bottom: $space-deca;
-}
-
-* + * {
-  margin-top: $space-centi;
-}
-
-a {
-  $underline-width: 1px;
-
-  color: $color-link;
-
-  @include underline(2px);
 }
 
 h1 {
