--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -17,3 +17,5 @@
 @import 'components/nav-bar';
 @import 'components/nav-burger';
 @import 'components/nav-menu';
+@import 'components/home-section';
+@import 'components/hero-section';
