--- a/src/static/scss/base/_typography.scss
+++ b/src/static/scss/base/_typography.scss
@@ -13,8 +13,8 @@ p,
 li,
 blockquote,
 pre {
-  font-size: $font-size-deci;
-  line-height: $line-height-centi;
+  font-size: $font-size-centi;
+  line-height: $line-height-mili;
 
   @include bp-mediumup {
     font-size: $font-size-base;
@@ -29,12 +29,12 @@ h3 {
 }
 
 h1 {
-  font-size: $font-size-hecto;
+  font-size: $font-size-deca;
   line-height: $line-height-base;
 
   @include bp-mediumup {
-    font-size: $font-size-kilo;
-    line-height: $line-height-hecto;
+    font-size: $font-size-hecto;
+    line-height: $line-height-base;
   }
 }
 
@@ -90,7 +90,7 @@ pre {
 
 pre {
   line-height: $line-height-mili;
-  
+
   @include bp-mediumup {
     line-height: $line-height-centi;
   }
