Create input style

--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -3,6 +3,7 @@ $color-link: #36c;
 $color-whitesmoke: #F4F4F4;
 $color-brand: #2DA965;
 $color-deep-gray: #474747;
+$color-grayish: #D0D0D0;
 
 
 // Social colors
