--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -19,3 +19,4 @@
 @import 'components/nav-menu';
 @import 'components/home-section';
 @import 'components/hero-section';
+@import 'components/projects-list';
