--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -22,7 +22,7 @@
       <p>Nessa interação, ganha a sociedade, que participa mais ativamente do processo legislativo, e ganha o Parlamento, que aprova leis mais aprimoradas e conectadas às necessidades dos cidadãos.</p>
     </div>
     <div class="projects-list">
-      Projetos
+      <input type="text" placeholder="Buscar">
     </div>
   </div>
 </main>
