--- a/src/static/scss/base/_unclassed.scss
+++ b/src/static/scss/base/_unclassed.scss
@@ -15,7 +15,6 @@
   outline: none;
 
   appearance: none;
-
   -webkit-tap-highlight-color: rgba(0,0,0,0);
 
   &:focus {
@@ -151,5 +150,26 @@ pre {
   @include bp-smallup {
     margin-right: -$space-deci;
     margin-left: -$space-deci;
+  }
+}
+
+input {
+  font-size: .875rem;
+
+  box-sizing: border-box;
+  width: 100%;
+  height: 3rem;
+  padding: .875rem;
+
+  color: $color-deep-gray;
+
+  @include shadow-bottom;
+
+  &:focus {
+    outline: none;
+  }
+
+  &::placeholder{
+    color: $color-grayish;
   }
 }
