Create projects list

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -20,3 +20,6 @@
 @import 'components/home-section';
 @import 'components/hero-section';
 @import 'components/projects-list';
+@import 'components/simple-card';
+@import 'components/voting-action';
+@import 'components/simple-button';
