--- a/src/static/scss/components/_projects-list.scss
+++ b/src/static/scss/components/_projects-list.scss
@@ -1,3 +1,17 @@
 .projects-list {
-  margin-top: 2rem;
+  & > .search {
+    margin-top: 2rem;
+  }
+
+  & > .list {
+    margin-top: 1rem;
+  }
+
+  & > .list > h2 {
+    margin-top: 2.5rem;
+  }
+
+  & > .list > .simple-card {
+    margin-top: 1rem;
+  }
 }
