--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -22,7 +22,115 @@
       <p>Nessa interação, ganha a sociedade, que participa mais ativamente do processo legislativo, e ganha o Parlamento, que aprova leis mais aprimoradas e conectadas às necessidades dos cidadãos.</p>
     </div>
     <div class="projects-list">
-      <input type="text" placeholder="Buscar">
+      <input class="search" type="text" placeholder="Buscar">
+      <div class="list">
+        <h2>Convites</h2>
+        <a href="#" class="simple-card">
+          <span class="status">Aberto até 22/11/18</span>
+          <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
+          <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
+          <div class="info">
+            <div class="themes">
+              <div class="theme">
+                <img src="{% static 'img/book.svg' %}" alt="Wikilegis">
+                <span>Educação</span>
+              </div>
+              <div class="theme">
+                <img src="{% static 'img/coin.svg' %}" alt="Wikilegis">
+                <span>Economia</span>
+              </div>
+            </div>
+            <div class="suggestions">
+              <div class="suggestion">
+                <span class="value">21</span>
+                <span>Sugestões</span>
+              </div>
+            </div>
+          </div>
+          <hr/>
+          <div class="voting-action">
+            <span class="info">
+              <img class="icon" src="{% static 'img/information.svg' %}">Você foi convidado para participar nesta proposição
+            </span>
+            <div class="actions">
+              <div class="simple-button -green">Aceitar</div>
+              <div class="simple-button -red">Recusar</div>
+            </div>
+          </div>
+        </a>
+      </div>
+      <div class="list">
+        <h2>Participação Popular</h2>
+        <a href="#" class="simple-card">
+          <span class="status">Aberto até 22/11/18</span>
+          <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
+          <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
+          <div class="info">
+            <div class="themes">
+              <div class="theme">
+                <img src="{% static 'img/book.svg' %}" alt="Wikilegis">
+                <span>Educação</span>
+              </div>
+              <div class="theme">
+                <img src="{% static 'img/coin.svg' %}" alt="Wikilegis">
+                <span>Economia</span>
+              </div>
+            </div>
+            <div class="suggestions">
+              <div class="suggestion">
+                <span class="value">21</span>
+                <span>Sugestões</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="simple-card">
+          <span class="status">Aberto até 22/11/18</span>
+          <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
+          <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
+          <div class="info">
+            <div class="themes">
+              <div class="theme">
+                <img src="{% static 'img/book.svg' %}" alt="Wikilegis">
+                <span>Educação</span>
+              </div>
+              <div class="theme">
+                <img src="{% static 'img/coin.svg' %}" alt="Wikilegis">
+                <span>Economia</span>
+              </div>
+            </div>
+            <div class="suggestions">
+              <div class="suggestion">
+                <span class="value">21</span>
+                <span>Sugestões</span>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="simple-card -inactive">
+          <span class="status">Aberto até 22/11/18</span>
+          <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
+          <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
+          <div class="info">
+            <div class="themes">
+              <div class="theme">
+                <img src="{% static 'img/book.svg' %}" alt="Wikilegis">
+                <span>Educação</span>
+              </div>
+              <div class="theme">
+                <img src="{% static 'img/coin.svg' %}" alt="Wikilegis">
+                <span>Economia</span>
+              </div>
+            </div>
+            <div class="suggestions">
+              <div class="suggestion">
+                <span class="value">21</span>
+                <span>Sugestões</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
     </div>
   </div>
 </main>
@@ -46,6 +154,7 @@
   <script src="{% static 'js/components/documentBody/view.js' %}"></script>
   <script src="{% static 'js/components/suggestionInput/view.js' %}"></script>
   <script src="{% static 'js/components/navBurger/view.js' %}"></script>
+  <script src="{% static 'js/components/navBar/view.js' %}"></script>
   <script src="{% static 'js/components/body/view.js' %}"></script>
   <script src="{% static 'js/pages/home.js' %}"></script>
 {% endblock page_js %}
