--- a/src/static/scss/base/_reusables.scss
+++ b/src/static/scss/base/_reusables.scss
@@ -5,6 +5,14 @@
   background-position: 100% calc(100% - #{$offset});
 }
 
-@mixin shadow-bottom {
+@mixin card-shadow {
   box-shadow: 3px 3px 4px rgba(0, 0, 0, 0.08);
+}
+
+@mixin header-shadow {
+  box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.08);
+}
+
+@mixin footer-shadow {
+  box-shadow: 0px -3px 4px rgba(0, 0, 0, 0.08);
 }
