Send suggestion done
Signed-off-by: Matheus Fernandes <matheus.souza.fernandes@gmail.com>

--- a/src/templates/structure/base.html
+++ b/src/templates/structure/base.html
@@ -43,9 +43,12 @@
     {% include "components/generic-modal.html" %}
 
     {% compress js %}
+      <script src="{% static 'django_js_reverse/js/reverse.js' %}"></script>
       <script src="{% static 'jquery/dist/jquery.min.js' %}"></script>
       <script src="{% static 'js/utils/publishSubscribe.js' %}"></script>
       <script src="{% static 'js/utils/events.js' %}"></script>
+      <script src="{% static 'js/utils/cookies.js' %}"></script>
+      <script src="{% static 'js/utils/ajax.js' %}"></script>
       {% block page_js %}
       {% endblock page_js %}
     {% endcompress %}
