--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -154,6 +154,7 @@
   <script src="{% static 'js/components/navBar/view.js' %}"></script>
   <script src="{% static 'js/components/searchInput/view.js' %}"></script>
   <script src="{% static 'js/components/suggestionInput/view.js' %}"></script>
+  <script src="{% static 'js/components/suggestionInput/controller.js' %}"></script>
   <script src="{% static 'js/components/body/view.js' %}"></script>
   <script src="{% static 'js/pages/home.js' %}"></script>
 {% endblock page_js %}
