Create search input

--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -22,7 +22,7 @@
       <p>Nessa interação, ganha a sociedade, que participa mais ativamente do processo legislativo, e ganha o Parlamento, que aprova leis mais aprimoradas e conectadas às necessidades dos cidadãos.</p>
     </div>
     <div class="projects-list">
-      <input class="search" type="text" placeholder="Buscar">
+      <input class="search js-search" type="text" placeholder="Buscar">
       <div class="list">
         <h2>Convites</h2>
         <a href="#" class="simple-card">
@@ -155,6 +155,7 @@
   <script src="{% static 'js/components/suggestionInput/view.js' %}"></script>
   <script src="{% static 'js/components/navBurger/view.js' %}"></script>
   <script src="{% static 'js/components/navBar/view.js' %}"></script>
+  <script src="{% static 'js/components/searchInput/view.js' %}"></script>
   <script src="{% static 'js/components/body/view.js' %}"></script>
   <script src="{% static 'js/pages/home.js' %}"></script>
 {% endblock page_js %}
