--- a/src/static/scss/ambience/_typography.scss
+++ b/src/static/scss/ambience/_typography.scss
@@ -1,9 +1,9 @@
 $font-family-body: 'Roboto', sans-serif;
-$font-family-mono: 'Montserrat', sans-serif;
+$font-family-brand: 'Montserrat', sans-serif;
 
 $font-size-mega: 7.5rem;
 $font-size-kilo: 4.1rem;
-$font-size-hecto: 2.8rem;
+$font-size-hecto: 2.25rem;
 $font-size-deca: 2rem;
 $font-size-base: 1.5rem;
 $font-size-deci: 1.2rem;
@@ -16,4 +16,4 @@ $line-height-deca: 3.5rem;
 $line-height-base: 3rem;
 $line-height-deci: 2.5rem;
 $line-height-centi: 2rem;
-$line-height-mili: 1.5rem;
+$line-height-mili: 1.75rem;
