--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -17,3 +17,9 @@
 @import 'components/nav-bar';
 @import 'components/nav-burger';
 @import 'components/nav-menu';
+@import 'components/home-section';
+@import 'components/hero-section';
+@import 'components/projects-list';
+@import 'components/simple-card';
+@import 'components/voting-action';
+@import 'components/simple-button';
