--- a/src/static/scss/base/_typography.scss
+++ b/src/static/scss/base/_typography.scss
@@ -3,18 +3,13 @@ html {
   font-size: 16px;
 }
 
-main {
-  font-variant-numeric: oldstyle-nums;
-  font-feature-settings: 'liga1' on;
-}
-
 main,
 p,
 li,
 blockquote,
 pre {
-  font-size: $font-size-deci;
-  line-height: $line-height-centi;
+  font-size: $font-size-centi;
+  line-height: $line-height-mili;
 
   @include bp-mediumup {
     font-size: $font-size-base;
@@ -29,18 +24,18 @@ h3 {
 }
 
 h1 {
-  font-size: $font-size-hecto;
+  font-size: $font-size-deca;
   line-height: $line-height-base;
 
   @include bp-mediumup {
-    font-size: $font-size-kilo;
-    line-height: $line-height-hecto;
+    font-size: $font-size-hecto;
+    line-height: $line-height-base;
   }
 }
 
 h2 {
-  font-size: $font-size-deca;
-  line-height: $line-height-deci;
+  font-size: $font-size-base;
+  line-height: $line-height-centi;
 
   @include bp-mediumup {
     font-size: $font-size-hecto;
@@ -49,8 +44,8 @@ h2 {
 }
 
 h3 {
-  font-size: $font-size-base;
-  line-height: $line-height-centi;
+  font-size: $font-size-deci;
+  line-height: $line-height-mili;
 
   @include bp-mediumup {
     font-size: $font-size-deca;
@@ -80,18 +75,5 @@ ol > li:before {
 
   @include bp-mediumup {
     font-size: $font-size-centi;
-  }
-}
-
-code,
-pre {
-  font-family: $font-family-mono;
-}
-
-pre {
-  line-height: $line-height-mili;
-  
-  @include bp-mediumup {
-    line-height: $line-height-centi;
   }
 }
