--- a/src/static/scss/ambience/_colors.scss
+++ b/src/static/scss/ambience/_colors.scss
@@ -2,6 +2,11 @@ $color-theme: #396;
 $color-link: #36c;
 $color-whitesmoke: #F4F4F4;
 $color-brand: #2DA965;
+$color-deep-gray: #474747;
+$color-grayish: #D0D0D0;
+$color-gray: #949494;
+$color-red: #EB6767;
+
 
 // Social colors
 $color-facebook: #3b5998;
