--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -25,7 +25,7 @@
       <input class="search js-search" type="text" placeholder="Buscar">
       <div class="list">
         <h2>Convites</h2>
-        <a href="#" class="simple-card">
+        <a href="/document" class="simple-card">
           <span class="status">Aberto até 22/11/18</span>
           <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
           <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
@@ -61,7 +61,7 @@
       </div>
       <div class="list">
         <h2>Participação Popular</h2>
-        <a href="#" class="simple-card">
+        <a href="/document" class="simple-card">
           <span class="status">Aberto até 22/11/18</span>
           <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
           <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
@@ -84,7 +84,7 @@
             </div>
           </div>
         </a>
-        <a href="#" class="simple-card">
+        <a href="/document" class="simple-card">
           <span class="status">Aberto até 22/11/18</span>
           <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
           <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
@@ -107,7 +107,7 @@
             </div>
           </div>
         </a>
-        <a href="#" class="simple-card -inactive">
+        <a href="/document" class="simple-card -inactive">
           <span class="status">Aberto até 22/11/18</span>
           <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
           <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
@@ -134,25 +134,11 @@
     </div>
   </div>
 </main>
-
-<div class="suggestion-input js-suggestionInput">
-  <div class="close js-close">x</div>
-  <div class="text">
-    <p class="js-selectedText"></p>
-  </div>
-
-  <div>
-    <input class="js-input" type="text" name="">
-    <span class="js-inputError"></span>
-    <button class="js-send">Enviar</button>
-  </div>
-</div>
 {% endblock content %}
 
 {% block page_js %}
   <script src="{% static 'js/components/documentExcerpt/view.js' %}"></script>
   <script src="{% static 'js/components/documentBody/view.js' %}"></script>
-  <script src="{% static 'js/components/suggestionInput/view.js' %}"></script>
   <script src="{% static 'js/components/navBurger/view.js' %}"></script>
   <script src="{% static 'js/components/navBar/view.js' %}"></script>
   <script src="{% static 'js/components/searchInput/view.js' %}"></script>
