Create text highlight

--- a/src/templates/pages/document.html
+++ b/src/templates/pages/document.html
@@ -21,7 +21,7 @@
     <hr>
   </div>
 
-  <p><b>Art. 1º - </b><span class="document-excerpt js-documentExcerpt" data-id="1">As campanhas publicitárias destinadas à venda de produtos de consumo ficam proibidas de exibir, em qualquer veículo de comunicação ou propaganda, imagens ou cenas que façam, direta ou indiretamente, apelo erótico ou alusão à sexualidade e à sensualidade feminina.</span></p>
+  <p><b>Art. 1º - </b><span class="document-excerpt js-documentExcerpt" data-id="1">As campanhas publicitárias <span class="text-highlight">destinadas à venda de produtos de consumo ficam proibidas de exibir, em qualquer veículo de comunicação ou propaganda, imagens ou cenas que façam,</span> direta ou indiretamente, apelo erótico ou alusão à sexualidade e à sensualidade feminina.</span></p>
 
   <p><b>Art. 2º - </b><span class="document-excerpt js-documentExcerpt" data-id="2">As peças publicitárias ficam proibidas de apresentar, de forma evidente ou subliminar, linguagem verbal de conotação erótica ou sexual, ou expressões que evidenciem a exploração, a violência ou a discriminação contra a mulher.</span></p>
 
