--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -23,3 +23,4 @@
 @import 'components/simple-card';
 @import 'components/voting-action';
 @import 'components/simple-button';
+@import 'components/text-highlight';
