--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -25,7 +25,7 @@
       <input class="search js-search" type="text" placeholder="Buscar">
       <div class="list">
         <h2>Convites</h2>
-        <a href="/document" class="simple-card">
+        <div class="simple-card">
           <span class="status">Aberto até 22/11/18</span>
           <h3>Patrocínio de bancos públicos a clubes de futebol</h3>
           <p>Condiciona o recebimento de patrocínio de bancos públicos pelos clubes de futebol e associações esportivas à adoção de medidas de proteção de crianças e adolescentes contra a violência sexual.</p>
@@ -53,11 +53,11 @@
               <img class="icon" src="{% static 'img/information.svg' %}">Você foi convidado para participar nesta proposição
             </span>
             <div class="actions">
-              <div class="simple-button -green">Aceitar</div>
-              <div class="simple-button -red">Recusar</div>
+              <a href="/document" class="simple-button -green">Aceitar</a>
+              <a href="#" class="simple-button -red">Recusar</a>
             </div>
           </div>
-        </a>
+        </div>
       </div>
       <div class="list">
         <h2>Participação Popular</h2>
