Create generic modal

--- a/src/static/scss/app.scss
+++ b/src/static/scss/app.scss
@@ -22,5 +22,8 @@
 @import 'components/projects-list';
 @import 'components/simple-card';
 @import 'components/voting-action';
-@import 'components/simple-button';
+@import 'components/outline-button';
+@import 'components/solid-button';
 @import 'components/text-highlight';
+@import 'components/generic-modal';
+@import 'components/simple-link';
