--- a/src/templates/pages/home.html
+++ b/src/templates/pages/home.html
@@ -53,8 +53,8 @@
               <img class="icon" src="{% static 'img/information.svg' %}">Você foi convidado para participar nesta proposição
             </span>
             <div class="actions">
-              <a href="/document" class="simple-button -green">Aceitar</a>
-              <a href="#" class="simple-button -red">Recusar</a>
+              <a href="/document" class="outline-button -green">Aceitar</a>
+              <a href="#" class="outline-button -red">Recusar</a>
             </div>
           </div>
         </div>
@@ -134,6 +134,7 @@
     </div>
   </div>
 </main>
+
 {% endblock content %}
 
 {% block page_js %}
